Fix/7683 qamy orcid increase spacing between sections in names modal (#1247)
* style: add space between visibility names and other names title

* fix: improve drag & drop functionality in modal names

* 🤖 GITHUB ACTIONS: formatting 🤖

--- a/src/app/record/components/top-bar/modals/modal-name/modal-name.component.scss
+++ b/src/app/record/components/top-bar/modals/modal-name/modal-name.component.scss
@@ -6,9 +6,18 @@ label {
   margin: 6px 0 3px 0;
 }
 
+hr.dashed-line {
+  margin-bottom: 0 !important;
+}
+
 ::ng-deep .columns-4-or-8 .mat-form-field {
   width: 100%;
   margin-inline-end: auto;
+}
+
+.other-names-list.cdk-drop-list-dragging
+  .other-names-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .required {
@@ -26,6 +35,11 @@ label {
 .input-container {
   max-width: 402px;
 }
+
+.names-visibility {
+  margin-bottom: 18px;
+}
+
 .other-names-input-line {
   margin-top: 20px;
   img {
@@ -61,32 +75,8 @@ label {
   margin: 4px;
 }
 
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
 .actions-wrapper {
   flex-wrap: nowrap;
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-::ng-deep .cdk-drop-list-dragging {
-  cursor: move !important;
-  .mat-form-field-flex,
-  .mat-select-trigger,
-  .mat-button,
-  .mat-icon-button,
-  .mat-stroked-button,
-  .mat-flat-button {
-    cursor: move !important;
-  }
-}
-
-::ng-deep .cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .mat-form-field {
